--- a/style.css
+++ b/style.css
@@ -1,35 +1,13 @@
-.container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+* {
+    font-family: Vazirmatn, sans-serif;
 }
 
-h2 {
-    text-align: center;
-    margin-bottom: 20px;
-}
 
-.form-group {
-    margin-bottom: 15px;
-}
 
-label {
-    display: block;
-    margin-bottom: 5px;
-}
+sumbit {
+    font-family: Vazirmatn, sans-serif;
+    background-color: #2d376e;
+    border-style: none;
+    color: #2d376e;
 
-input, select, textarea {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
 }
-
-textarea {
-    height: 100px;
-}
-
-button {
-    width: 100%;
-    padding: 10
